# system-wiki

./: .gitignore  README.md  pyproject.toml
docs/evals/: context-engine-starter.json  questions.md
docs/onboarding/: first-30-minutes.md
docs/roadmap/: capability-matrix.md  progress-checklist.md
scripts/: smoke-test.sh
system_wiki/: SKILL.md  __init__.py  __main__.py  analyze_graph.py  analyze_questions.py  build_graph.py  cache_file_hash.py  constants.py  detect_files.py  detect_office_convert.py  eval_benchmarks.py  export_html.py  export_json.py  export_vault.py  extract_ast_walker.py  extract_call_graph.py  extract_custom_languages.py  extract_custom_languages_2.py  extract_docs.py  extract_elixir.py  extract_import_handlers.py  extract_inheritance.py  extract_language_configs.py  extract_public_api.py  extract_python_postprocess.py  extract_signatures.py  ingest_url.py  module_graph.py  note_writer.py  query_graph.py  report_markdown.py  schema_rules.py  security_helpers.py  validate_schema.py  watch_folder.py
tests/: test_context_for.py  test_eval_benchmarks.py  test_extract_docs.py  test_extract_public_api.py  test_graph_diff.py
tests/fixtures/js_ts_flow/: index.ts  service.ts  util.ts
tests/fixtures/mobile_java/com/example/app/: Service.java
tests/fixtures/mobile_java/com/example/util/: Helper.java
tests/fixtures/mobile_kotlin/com/example/app/: Service.kt
tests/fixtures/mobile_kotlin/com/example/util/: Helper.kt
tests/fixtures/mobile_objc/: Service.h  Service.m  Store.h  Store.m
tests/fixtures/mobile_swift/Sources/AppFeature/: Service.swift
tests/fixtures/mobile_swift/Sources/SharedKit/: Store.swift
